src/objects/ints__EfxReport_SecuredLoan__c.object
<CustomObject>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport SecuredLoans</relationshipLabel>
        <relationshipName>EfxReport_SecuredLoans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__MaturityDate__c</fullName>
        <label>MaturityDate</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__NameAddressAndAmount__c</fullName>
        <label>NameAddressAndAmount</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport SecuredLoan</label>
    <nameField>
        <displayFormat>EFX-SECURED-LOAN-{0000000000}</displayFormat>
        <label>EfxReport SecuredLoan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport SecuredLoans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>